--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>portfolio</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
             <nav class="navbar">
                 <div class="brand"></div>
-                <h2>JC</h2>
-                <ul>
-                    <li><a href="#">Home</a></li>
+                <h2>J<span>C</span></h2>
+                <ul class="menu">
+                    <li ><a class="active" href="#">Home</a></li>
                     <li><a href="#">About me</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
