--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
                 </ul>
             </nav>
         </header>
+
+        <main class="main">
+            <div class="info content">
+                <h1>I'm <span>Mathew</span>Gonzalez</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis facere iure saepe qui sit et unde facilis similique fugiat ratione laudantium eveniet autem eligendi veniam, temporibus eos dolorum aspernatur laboriosam.</p>
+            <a download href="#">
+                <BUtton>Download CV</BUtton>  
+            </a>
+            </div>
+            <img src="./Assets/img/Avatar.jpg" alt="">
+        </main>
+        
     </div>
+
+
+
+
 </body>
 </html>
