--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <h1>I'm <span>Mathew</span>Gonzalez</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis facere iure saepe qui sit et unde facilis similique fugiat ratione laudantium eveniet autem eligendi veniam, temporibus eos dolorum aspernatur laboriosam.</p>
             <a download href="#">
-                <BUtton>Download CV</BUtton>  
+                <BUtton class="download-cv">Download CV</BUtton>  
             </a>
             </div>
-            <img src="./Assets/img/Avatar.jpg" alt="">
+            <img src="./Assets/img/Avatar.jpg" class="img" alt="">
         </main>
         
     </div>
