--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav class="navbar">
                 <div class="brand"></div>
-                <h2>J<span>C</span></h2>
+                <h2>M<span>G</span></h2>
                 <ul class="menu">
                     <li ><a class="active" href="#">Home</a></li>
                     <li><a href="#">About me</a></li>
@@ -30,12 +30,21 @@
                 <BUtton class="download-cv">Download CV</BUtton>  
             </a>
             </div>
-            <img src="./Assets/img/Avatar.jpg" class="img" alt="">
+            <img src="./Assets/img/Avatar.jpg" class="img" alt="Mathew Gonzalez picture">
         </main>
         
     </div>
 
-
+<div class="about">
+    <img src="./Assets/img/Imag about me .jpg" alt="Mathew img ">
+</div>
+<div class="about-info">
+    <H2>About me </H2>
+    <div class="divider"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores quasi culpa ipsam ad reprehenderit molestias, distinctio aspernatur illum tempore aut sed molestiae harum id recusandae ratione non voluptatibus perferendis.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis cupiditate adipisci, consequuntur minus doloremque accusamus odit ducimus saepe perspiciatis facilis laudantium eum dolore rerum corrupti, voluptatibus atque incidunt. Voluptate, nulla.</p>
+    <button class="download-cv">Read more</button>
+</div>info 
 
 
 </body>
