--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="./Assets/img/Avatar.jpg" class="img" alt="Mathew Gonzalez picture">
         </main>
         
-    </div>info
+    </div>
 
 <div class="about">
     <img src="./Assets/img/Imag about me .jpg" alt="Mathew img ">
@@ -44,6 +44,15 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores quasi culpa ipsam ad reprehenderit molestias, distinctio aspernatur illum tempore aut sed molestiae harum id recusandae ratione non voluptatibus perferendis.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis cupiditate adipisci, consequuntur minus doloremque accusamus odit ducimus saepe perspiciatis facilis laudantium eum dolore rerum corrupti, voluptatibus atque incidunt. Voluptate, nulla.</p>
     <button class="download-cv">Read more</button>
+</div>
+</div>
+
+
+<div class="portfolio">
+    <div class="portfolio-headings">
+        <h2>My portfolio</h2>
+        <div class="divider"></div>
+    </div>
 </div>
 
 
