--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
         <h2>My portfolio</h2>
         <div class="divider"></div>
     </div>
+
+    <div class="container"></div>
+    <div class="card">
+        <div class="card__img">      
+        </div>
+        <div class="card__title">
+            <h2>Project description</h2>
+        </div>
+        <div class="projects-links">
+            <a href=""></a>
+        </div>
+        <button class="project-details">
+            project details
+        </button>
+    </div>
 </div>
 
 
