--- a/index.html
+++ b/index.html
@@ -54,18 +54,56 @@
         <div class="divider"></div>
     </div>
 
-    <div class="container"></div>
+    <div class="container">
     <div class="card">
         <div class="card__img">      
         </div>
         <div class="card__title">
             <h2>Project description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
         </div>
         <div class="projects-links">
-            <a href=""></a>
+            <a href="">
+            </a>
         </div>
-        <button class="project-details">
-            project details
+        <button class="project-details download-cv">
+            <a href="">
+                Github
+            </a>
+        </button>
+    </div>
+    <div class="card">
+        <div class="card__img">      
+        </div>
+        <div class="card__title">
+            <h2>Project description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
+        </div>
+        <div class="projects-links">
+            <a href="">
+            </a>
+        </div>
+        <button class="project-details download-cv">
+            <a href="">
+                Facebook
+            </a>
+        </button>
+    </div>
+    <div class="card">
+        <div class="card__img">      
+        </div>
+        <div class="card__title">
+            <h2>Project description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
+        </div>
+        <div class="projects-links">
+            <a href="">
+            </a>
+        </div>
+        <button class="project-details download-cv">
+            <a href="">
+                Instagram
+            </a>
         </button>
     </div>
 </div>
