--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <H2>About me </H2>
     <div class="divider"></div>
     <p>My main qualities are: perseverance, strength and above all positivism.
-        I speak multiple languages ​ and have experience in the customer service section.</p>
+        I speak multiple languages ​ and have experience in the customer service section, Im originally from Ecuador and I'm 21 years old .</p>
     <p>I am a very energetic person, I like to help those who need help and above all improve all possible aspects of my environment, I am a person open to opinions and you can always count on me in any activity that requires a hand.</p>
     <button class="download-cv">Read more</button>
 </div>
@@ -60,8 +60,9 @@
         <div class="card__img">      
         </div>
         <div class="card__title">
-            <h2>Project description</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
+            <h2>Github</h2>
+            <p>This is my link to my last project if you want to check it out <a href="https://github.com/MathewG2099/Challange-week1">"https://github.com/MathewG2099/Challange-week1"</a></p>
+                
         </div>
         <div class="projects-links">
             <a href="">
@@ -77,8 +78,8 @@
         <div class="card__img">      
         </div>
         <div class="card__title">
-            <h2>Project description</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
+            <h2>Facebook</h2>
+            <p>This is my profile of Facebook <a href="https://www.facebook.com/mateo.gonzalez.161009?mibextid=ZbWKwL">https://www.facebook.com/mateo.gonzalez.161009?mibextid=ZbWKwL</a></p>
         </div>
         <div class="projects-links">
             <a href="">
@@ -94,8 +95,8 @@
         <div class="card__img">      
         </div>
         <div class="card__title">
-            <h2>Project description</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad suscipit tenetur sapiente possimus earum minima, neque a enim doloribus sequi illum vel ab eum eveniet error delectus consequatur adipisci iure!</p>
+            <h2>Instagram</h2>
+            <p>This is my profile of Instagram <a href="https://www.instagram.com/mateo.gonzalez.1610092?igsh=MXdsOGNyaWtraDYxdQ==">https://www.instagram.com/mateo.gonzalez.1610092?igsh=MXdsOGNyaWtraDYxdQ==</a></p>
         </div>
         <div class="projects-links">
             <a href="">
